Closed Bug 618694 Opened 14 years ago Closed 14 years ago

xulrunner help dialog text has trailing garbage

Categories

(Toolkit Graveyard :: XULRunner, defect)

x86_64
Windows 7
defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED
mozilla2.0b9

People

(Reporter: sean.bright, Assigned: sean.bright)

Details

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101209 Firefox/4.0b8pre Build Identifier: 1.9.2.14pre The Output() function in nsXULRunnerApp.cpp assumes that the output will be less than 1024 characters. With long version numbers (i.e. 1.9.2.14pre) this is not the case the the trailing \0 gets blow away resulting in invalid output. Reproducible: Always Steps to Reproduce: 1. Run xulrunner.exe without an arguments
Screenshot showing the corruption
Attached patch PatchSplinter Review
Increase the buffer size to 2k instead of 1k.
Attachment #497146 - Flags: review?(benjamin)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attachment #497146 - Flags: review?(benjamin) → review+
bsmedberg: Sorry to disturb you but how do we get this patch get into the tree ? The tree is currently approval only, should I request that or should I wait until the tree opens for FF5 ? I don't want to forget this patch and I don't think Sean knows how to get this into the tree.
(In reply to comment #3) > I don't want to forget this patch and I don't think Sean knows how to get this > into the tree. You are correct, although I'd be happy to take a stab at it. Can you point me to a document that describes the process?
Comment on attachment 497146 [details] [diff] [review] Patch I can approve this, it's basically risk-free. I'll add the keyword to get it checked in as a ridealong, although I'm not sure who is doing pushes at this point.
Attachment #497146 - Flags: approval2.0+
Keywords: checkin-needed
Assignee: nobody → sean.bright
Sorry - why was this assigned to me? I don't have commit access.
Because you wrote the patch, that's how we manage things in Bugzilla. The "checkin-needed" flag is an annotation we use for this very situation, so hopefully someone will land your patch for you.
Component: XUL → XULRunner
Product: Core → Toolkit
QA Contact: xptoolkit.widgets → xulrunner
Status: NEW → RESOLVED
Closed: 14 years ago
Flags: in-testsuite-
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b9
Version: unspecified → Trunk
Product: Toolkit → Toolkit Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: