Bug 618694 - xulrunner help dialog text has trailing garbage, r+a=bsmedberg